# buem

./: .env.example  .gitignore  _explore_excel.py  docker-compose.yml  environment.yml  environment_docker.yml  meta.yaml  pyproject.toml  readme.md  setup.bat  setup.ps1  setup_environment.bat  setup_environment.ps1  validate_environment.py
data/merra/austria/: .gitignore
data/merra/germany/: .gitignore
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/api_integration/: api_endpoints.rst  docker_setup.rst  error_handling.rst  examples.rst  index.rst  request_format.rst  response_format.rst
docs/source/deployment/: index.rst  production_deployment.rst
docs/source/installation/: conda_setup.rst  development_setup.rst  docker_installation.rst  index.rst  prerequisites.rst
docs/source/introduction/: index.rst
docs/source/modules/: apis.rst  config.rst  index.rst  integration.rst  occupancy.rst  results.rst  technology.rst  thermal.rst  weather.rst
src/buem/: __init__.py  cli.py  env.py  main.py
src/buem/apis/: api_server.py  model_api.py
src/buem/buildings/: __init__.py  building.py  pipeline.py
src/buem/buildings/components/: __init__.py  base.py  door.py  floor.py  roof.py  ventilation.py  wall.py  window.py
src/buem/buildings/datasources/: __init__.py  excel_source.py  pg_source.py
src/buem/buildings/generator/: __init__.py  json_generator.py
src/buem/buildings/mapping/: __init__.py  lod2_mapper.py
src/buem/config/: cfg_attribute.py
src/buem/integration/json_schema/versions/v2/dummy/: building_01_small_residential.json  building_02_medium_office.json  building_03_large_commercial.json  building_04_industrial.json  building_05_mixed_use.json
src/buem/integration/json_schema/versions/v3/: example_request.json  example_response.json  request_schema.json  response_schema.json
src/buem/integration/scripts/: geojson_processor.py  geojson_validator.py
src/buem/parallelization/: IMPLEMENTATION_SUMMARY.md  README.md  analyze_multibuilding.py  parallel_run.py  performance_comparison.py  production_optimize.py  run_multibuilding_demo.py  sequence_run.py
src/buem/thermal/: model_buem.py
src/buem/weather/: __init__.py  from_csv.py  from_merra.py
tests/: test_cli.py  test_energy.py  test_imports.py
