[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buem"
version = "0.1.2"
description = "Building energy model for analysis of hourly thermal load(ISO 52019-1:2017, 5R1C)"
authors = [
    { name="Somadutta Sahoo", email="s.sahoo@uu.nl" }
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pvlib",
    "scipy",
    "sympy",
    "openpyxl",
    "cvxpy",
    "flask",
    "python-dotenv",
    "gunicorn",
    "coincbc",
    "pulp",
    "marshmallow>=4.0.0",
    "marshmallow-dataclass>=8.0.0",
    "psutil",
    "joblib",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "Jinja2<3.1",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

keywords = [
    "building",
    "energy-model",
    "energy-communities",
    "parameterization",
    "open-source",
    "heating-cooling",
    "python",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS"
]

[project.scripts]
buem = "buem.main:main"

[tool.setuptools]
package-dir = {"" = "src"}