[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "buem"
dynamic = ["version"]
description = "Building energy model for analysis of hourly thermal load(ISO 52019-1:2017, 5R1C)"
authors = [
    { name="Somadutta Sahoo", email="s.sahoo@uu.nl" }
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.13"
keywords = [
    "building",
    "energy-model",
    "energy-communities",
    "parameterization",
    "open-source",
    "heating-cooling",
    "python",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "cvxpy",
    "flask",
    "flask-swagger-ui",
    "joblib",
    "jsonschema",
    "marshmallow>=4.0.0",
    "marshmallow-dataclass>=8.0.0",
    "matplotlib",
    "numba",
    "numpy",
    "openpyxl",
    "pandas",
    "psutil",
    "psycopg2",
    "pulp",
    "pvlib",
    "pyarrow",
    "python-dotenv",
    "scipy",
    "sympy",
]

[project.optional-dependencies]
docs = [
    "sphinx>=9.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=1.1.5",
]
server = [
    "gunicorn",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
buem = "buem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
buem = [
    "apis/openapi.yaml",
    "data/**/*",
    "softwares/**/*",
    "integration/json_schema/**/*",
]

[tool.setuptools_scm]
version_file = "src/buem/_version.py"
fallback_version = "0.1.3"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
